Modularized core elements. Create one file for each experiment, use termspec library.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Byte-compiled / optimized / DLL files
 termspec/__pycache__/
 __pycache__/
-termspec/termspec.tmp
+*.tmp
+termspec/*.tmp
 
 *.py[cod]
 *$py.class
